infra/k8s-stage/ingress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaming-ingress-stage
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "75"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "75"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-auth-srv
                port:
                  number: 3000
          - path: /api/event/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-event-srv
                port:
                  number: 3000
          - path: /api/slip/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-slip-srv
                port:
                  number: 3000
          - path: /api/bet/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-bet-srv
                port:
                  number: 3000
          - path: /api/backoffice/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gaming-backoffice-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaming-client-srv
                port:
                  number: 3000
